--- a/style.css
+++ b/style.css
@@ -30,7 +30,9 @@ body {
 	top: calc(50% - 15px);
 	left: calc(50% - 15px);
 }
-
+.h1 {
+  font-family: "Chango", Times, serif;
+}
 .ball_effect {
 	height: 100%;
 	width: 100%;
