--- a/style.css
+++ b/style.css
@@ -108,5 +108,5 @@ body {
 	color: #c9cbff;
 	left: 38vw;
 	margin: 30px auto auto auto;
-	font-family: "Chango", Times, serif;
+	font-family: "Truckson", Times, serif;
 }
