--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 	position: fixed;
 	top: calc(50% - 15px);
 	left: calc(50% - 15px);
+}
 
 .ball_effect {
 	height: 100%;
@@ -107,6 +108,5 @@ body {
 	width: 30vw;
 	color: #c9cbff;
 	left: 38vw;
-	font-family: "Impact", Times, serif;
 	margin: 30px auto auto auto;
 }
